# pastee

./: Cargo.toml  package.json  vite.config.ts
src/: App.css  App.tsx  clipboard.rs  code.html  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: clipboard.rs  lib.rs  main.rs  persist.rs
src/components/: ClipApp.tsx  ClipFooter.tsx  ClipHeader.tsx  ClipItem.tsx  ClipList.tsx  DebugPage.tsx
ui/: app-window.slint
