[package]
name = "pastee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
arboard = "3.6.1"
clipboard-master = "4.0.0"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.15"
hex = "0.4.3"
sha2 = "0.10.9"
slint = "1.14.1"

[build-dependencies]
slint-build = "1.14.1"
